--- a/css/index.css
+++ b/css/index.css
@@ -187,4 +187,49 @@ footer {
   font-size: 14px;
 }
 
+/* ************** MEDIA QUERIES ****************/
+@media screen and (max-width: 800px){
+/* header */
+header {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    border: 1px solid black;
+    justify-content: space-evenly;
+    
+    
+}
 
+header nav {
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    
+}
+
+.logo {
+    width: 30%;
+    
+}
+
+
+
+    .container {
+      display: flex;
+      flex-direction: column;
+    }
+    
+    .cta img {
+        display: none;
+        }
+
+    .cta {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+
+
+}
