--- a/css/index.css
+++ b/css/index.css
@@ -194,14 +194,14 @@ header {
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
-    border: 1px solid black;
+   
     justify-content: space-evenly;
     
     
 }
 
 header nav {
-    border: 1px solid black;
+    
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -213,23 +213,111 @@ header nav {
     
 }
 
-
-
-    .container {
-      display: flex;
-      flex-direction: column;
-    }
-    
-    .cta img {
+    /* **********innovation on demand******* */
+.cta img {
         display: none;
         }
 
-    .cta {
+.cta {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+        
+    }
+/* features and about  */
+
+.text-content {
+    padding: 10px;
+}
+
+.middle-img {
+   padding: 15px; 
+}
+
+}
+
+
+/* Mobile Media Query */
+
+@media screen and (max-width: 500px){
+
+header nav {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid black;
+    width: 100%;
+
+    
+    }
+
+    header nav a {
         display: flex;
+        margin-right: 0px;
+        padding: 25px;
+        border-top: 1px solid black;
+        width: 100%;
         justify-content: center;
-        align-items: center;
+        font-size: 30px;
         
     }
 
+    /* top content */
+
+    .top-content {
+        display: flex;
+        flex-direction: column;
+        font-size: 25px;
+        align-items: center;
+    
+    }
+
+    .top-content .text-content {
+        
+        justify-content: left;
+        
+        
+    }
+
+    .bottom-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 25px;
+        align-items: center;
+    }
+
+    .main-content .top-content .text-content {
+        width: 85%;
+        margin-right: 0px;
+        justify-content: left;
+        padding: 25px;
+    }
+
+    .main-content .bottom-content .text-content {
+        width: 85%;
+        margin-right: 0px;
+        justify-content: left;
+        padding: 25px;
+    }
+
+    .contact {
+        content: "";
+        margin: 0 auto;
+        border-top: 4px solid black;
+        padding: 39px 10px 0;
+        width: 95%;
+      }
+
+    .top-content {
+        content: "";
+        margin: 0 auto;
+        border-top: 4px solid black;
+        padding: 39px 10px 0;
+        width: 95%;
+    }
+
+    .cta {
+        border-bottom: none;
+    }
 
 }
